Add the correct JVM args based on the requested JVM version when a forked daemon is started