@@ -21,6 +21,7 @@ import org.gradle.api.internal.tasks.compile.daemon.CompilerWorkerExecutor;
 import org.gradle.internal.classloader.VisitableURLClassLoader;
 import org.gradle.internal.classpath.ClassPath;
 import org.gradle.internal.jvm.Jvm;
+import org.gradle.jvm.toolchain.JavaLanguageVersion;
 import org.gradle.language.base.internal.compile.Compiler;
 import org.gradle.process.JavaForkOptions;
 import org.gradle.process.internal.JavaForkOptionsFactory;
@@ -30,6 +31,7 @@ import org.gradle.workers.internal.FlatClassLoaderStructure;
 import org.gradle.workers.internal.KeepAliveMode;
 
 import java.io.File;
+import java.util.Collections;
 
 public class DaemonJavaCompiler extends AbstractDaemonCompiler<JavaCompileSpec> {
     private final Class<? extends Compiler<JavaCompileSpec>> compilerClass;
@@ -57,6 +59,7 @@ public class DaemonJavaCompiler extends AbstractDaemonCompiler<JavaCompileSpec> 
         if (!(spec instanceof ForkingJavaCompileSpec)) {
             throw new IllegalArgumentException(String.format("Expected a %s, but got %s", ForkingJavaCompileSpec.class.getSimpleName(), spec.getClass().getSimpleName()));
         }
+        ForkingJavaCompileSpec forkingSpec = (ForkingJavaCompileSpec) spec;
 
         File executable = Jvm.forHome(((ForkingJavaCompileSpec) spec).getJavaHome()).getJavaExecutable();
 
@@ -66,8 +69,27 @@ public class DaemonJavaCompiler extends AbstractDaemonCompiler<JavaCompileSpec> 
         javaForkOptions.setExecutable(executable);
 
         ClassPath compilerClasspath = classPathRegistry.getClassPath("JAVA-COMPILER");
-        FlatClassLoaderStructure classLoaderStructure = new FlatClassLoaderStructure(new VisitableURLClassLoader.Spec("compiler", compilerClasspath.getAsURLs()));
 
+        JavaLanguageVersion javaLanguageVersion = JavaLanguageVersion.of(forkingSpec.getJavaLanguageVersion());
+        if (javaLanguageVersion.canCompileOrRun(9)) {
+            // In JDK 9 and above the compiler internal classes are bundled with the rest of the JDK, but we need to export it to gain access.
+            javaForkOptions.jvmArgs(
+                "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+                "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
+            );
+        } else {
+            // In JDK 8 and below the compiler internal classes are bundled into the separate `lib/tools.jar` file under the JDK home.
+            compilerClasspath = compilerClasspath.plus(
+                Collections.singletonList(
+                    new File(forkingSpec.getJavaHome(), "lib/tools.jar")
+                )
+            );
+        }
+//        javaForkOptions.jvmArgs(
+//            "-agentlib:jdwp=transport=dt_socket,server=n,address=localhost:5006,suspend=y"
+//        );
+
+        FlatClassLoaderStructure classLoaderStructure = new FlatClassLoaderStructure(new VisitableURLClassLoader.Spec("compiler", compilerClasspath.getAsURLs()));
         return new DaemonForkOptionsBuilder(forkOptionsFactory)
             .javaForkOptions(javaForkOptions)
             .withClassLoaderStructure(classLoaderStructure)
